adding transaction and documentation for it, +swagger fixing
